--- a/src/bookmarker.html
+++ b/src/bookmarker.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<title>Bookmark</title>
+	<title>Reply to this Tiddler</title>
 	<link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.3.0/bootstrap.min.css">
 	<style>
 		html,
